# mhri_dialog

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/default_scripts/: begin.rive  simple_reply.rive
data/objects/: social_memory.rive
data/test_scripts/: test_object.rive
launch/: bringup.launch
src/: dialog.py  dialog_node.py
