<?xml version="1.0"?>
<package>
  <name>mhri_dialog</name>
  <version>0.0.0</version>
  <description>The package for developing Dialog (Chatbot Like) Engine for Social HRI Framework</description>

  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>
  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>

  <license>BSD</license>
  <url type="website">https://github.com/mhri/mhri/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mhri_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>mhri_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
